<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/primary_text"
            android:text="@string/home" />

        <TextView
            style="@style/primary_text"
            android:text="@string/guest" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/home_points"
            style="@style/scores"
            android:textColor="#F00" />

        <TextView
            android:id="@+id/guest_points"
            style="@style/scores" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/touchdown"
            style="@style/scoring_buttons"
            android:text="@string/touchdown" />

        <Button
            android:id="@+id/field_goal"
            style="@style/scoring_buttons"
            android:text="@string/field_goal" />

        <Button
            android:id="@+id/safety"
            style="@style/scoring_buttons"
            android:text="@string/safety" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/down"
            style="@style/scoring_buttons"
            android:layout_weight="1"
            android:text="@string/down"/>

        <Button
            android:id="@+id/switchs"
            style="@style/scoring_buttons"
            android:layout_weight="1"
            android:text="@string/switchs"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/second_text"
            android:text="@string/down" />

        <TextView
            style="@style/second_text"
            android:text="@string/to_go" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/downs_counter"
            style="@style/second_scores"
            android:text="@string/one"/>

        <EditText
            android:id="@+id/to_go_counter"
            style="@style/second_scores"
            android:inputType="number"
            android:text="@string/ten"/>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        style="@style/scoring_buttons"
        android:text="@string/reset"/>

</LinearLayout>
